crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__def_without_newline_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a:b i\n"
---
(BeginTopLevelDecls
    (BeginTypeOrTypeAlias
        Ident=>LowerIdent@0
        InlineTypeColon=>OpColon@1
        Ident=>LowerIdent@2
    EndTypeOrTypeAlias)
    HintExpr
    Ident=>LowerIdent@3
EndTopLevelDecls)

[=== canfmt below ===]
TypeAlias(Ident("a"), Name("b"))
Ident("i")

[=== formatted below ===]

