crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__double_assign_block_decl.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "abc =\n    def\nghi =\n    jkl\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        (BeginBlock HintExpr Ident=>LowerIdent@2 EndBlock)
    EndAssign)
    (BeginAssign
        Ident=>LowerIdent@3
        InlineAssign=>OpAssign@4
        (BeginBlock HintExpr Ident=>LowerIdent@5 EndBlock)
    EndAssign)
EndTopLevelDecls)

[=== canfmt below ===]
Assign("abc", Block([Ident("def")]))
Assign("ghi", Block([Ident("jkl")]))

[=== formatted below ===]

