crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__double_nested_decl.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a =\n    b =\n        c\n    d\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        (BeginBlock
            (BeginAssign
                Ident=>LowerIdent@2
                InlineAssign=>OpAssign@3
                (BeginBlock HintExpr Ident=>LowerIdent@4 EndBlock)
            EndAssign)
            HintExpr
            Ident=>LowerIdent@5
        EndBlock)
    EndAssign)
EndTopLevelDecls)

[=== canfmt below ===]
Assign("a", Block([Assign("b", Block([Ident("c")])), Ident("d")]))

[=== formatted below ===]

